tests/NormalTests/paczka1/fuzzy1/49427742.err
Error in line 19: pXRZfh5 S129 40,2
Error in line 25: pXRZfh5 A244 -3,3
Error in line 24: pXRZfh5 A244 53,6
Error in line 26: pXRZfh5 S811 67,8
